<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="begin_page_string">每一个目标\n都是你人生的重要组成部分\nELINC郁林</string>
    <string name="app_name">郁林</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_username_hint">请输入手机号&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="login_email_hint">请在此输入密码&#8230;</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">确认密码 </string>
    <string name="message_search_hint">搜索&#8230;</string>
    
    <string name="main_tab_recent">会话</string>
    <string name="main_tab_contact">联系人</string>
    <string name="mian_tab_set">设置</string>
    
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="add_name_hint">请输入昵称&#8230;</string>
    <string name="add_gender">性别</string>
    
    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="tips">提示</string>
    
    <string name="logout"><b>退出登陆</b></string>
    <string name="pop_photo">拍照</string>
    <string name="pop_choose">从手机相册选中</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_error_username_null">用户名不能为空</string>
    <string name="toast_error_comfirm_password">输入的两次密码不一致</string>

    <string name="blacklist">黑名单</string>
    <string name="chat">发起会话</string>
    <string name="add_friend">添加好友</string>
    
    <string name="send_state">已读</string>
    
    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    
    <string name="black_tips">已添加至黑名单，你将不再收到对方的消息!</string>
    
    <string name="username">用户名</string>
    <string name="search">搜索</string>
    
    <string name="new_friends">新朋友</string>
    
    <string name="near_people">附近的人</string>
    
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    
    <string name="voice_short_tips">录音时间太短</string>
    
    <string name="show_notice">\t\t\t\t\t自V1.0.6版本开始，应用源码中将不再公开ApplicationId,开发者请自行到官网申请。\n\t\t\t\t\t申请成功之后在应用程序启动页(SplashActivity)进行初始化操作!</string>
    <string name="title_activity_new_question">NewQuestionActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_login_activitytest">LoginActivitytest</string>
    <string name="title_activity_recent">RecentActivity</string>
    <string name="title_activity_first_update_info">FirstUpdateInfo</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_about_us_activity_elinc">AboutUsActivityElinc</string>
    <string name="title_activity_bug_report_activity_elinc">BugReportActivityElinc</string>
    <string name="title_activity_new_aim_activity_elinc">NewAimActivityElinc</string>
    <string name="title_activity_my_favorite_activity_elinc">MyFavoriteActivityElinc</string>
    <string name="loading">加载中</string>
    <string name="bold_submit"><u>提交</u></string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my_goal_activity_elinc">MyGoalActivityElinc</string>
    <string name="title_activity_card_item_activity_elinc">CardItemActivityElinc</string>
    <string name="title_activity_find_password">FindPassword</string>
    <string name="title_activity_pic_drag_zoom_activity_elinc">PicDragZoomActivityElinc</string>
    <string name="title_activity_find_question">FindQuestion</string>
    <drawable name="green_normal">#65cb98</drawable>
    <drawable name="green_pressed">#65cb98</drawable>
    <string name="title_activity_my_tree">MyTreeActivity</string>

    <resources>
        <string-array name="campus">
            <item>紫金港校区</item>
            <item>玉泉校区</item>
            <item>西溪校区</item>
            <item>枝江校区</item>
            <item>舟山校区</item>
            <item>华家池校区</item>
        </string-array>
    </resources>
</resources>