<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_all"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_color"
    android:orientation="vertical" >

    <include
        android:id="@+id/common_actionbar"
        layout="@layout/include_action_bar" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:id="@+id/layout_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/about_top_bg"
        android:minHeight="60dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp" >

        <TextView
            android:textSize="18sp"
            style="@style/Smile.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/add_avator" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_set_avator"
                style="@style/Smile.ImageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/head" />

            <ImageView
                android:id="@+id/iv_arraw"
                style="@style/Smile.ImageView"
                android:layout_width="20dp"
                android:contentDescription="@string/action_settings"
                android:src="@drawable/register_bottom_arrow" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_nick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/about_mid_bg"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/add_nick" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:text="0"
                android:layout_marginRight="20dp"
                android:id="@+id/tv_set_nick"
                style="@style/Smile.TextView._Black"
                android:drawablePadding="10dp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/about_mid_bg"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/add_gender" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:text="0"
                android:id="@+id/tv_set_gender"
                style="@style/Smile.TextView._Black"
                android:layout_marginRight="20dp"
                android:drawablePadding="10dp" />
            
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_campus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/about_mid_bg"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="校区" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:text="0"
                android:id="@+id/tv_set_campus"
                style="@style/Smile.TextView._Black"
                android:layout_marginRight="20dp"
                android:drawablePadding="10dp" />

        </LinearLayout>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/layout_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/about_mid_bg"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="状态" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:text="0"
                android:id="@+id/tv_set_sign"
                style="@style/Smile.TextView._Black"
                android:layout_marginRight="20dp"
                android:drawablePadding="10dp" />

        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/layout_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/about_mid_bg"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="目标"
            android:id="@+id/goal"/>

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/goal"
            android:layout_centerVertical="true"
            android:gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_set_goal"
                style="@style/Smile.TextView._Black"
                android:layout_height="wrap_content"
                android:text="暂无"
                android:layout_marginRight="20dp"
                android:drawablePadding="10dp" />

        </LinearLayout>

    </RelativeLayout>
    <Button
        style="@style/large_btn"
        android:id="@+id/iv_edit"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="编辑资料"
        />
    <Button
        android:id="@+id/btn_add_friend"
        style="@style/large_btn"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/add_friend"
        android:visibility="gone" />



    <Button
        android:id="@+id/btn_chat"
        style="@style/large_btn"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/chat" />

    <Button
        android:id="@+id/btn_black"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        style="@style/large_btn"

        android:text="@string/blacklist" />

    <RelativeLayout
        android:id="@+id/layout_black_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:visibility="gone" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_centerInParent="true"
            android:text="@string/black_tips"
            android:textSize="14sp" />
    </RelativeLayout>

    </LinearLayout>
</LinearLayout>