<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_color"
    android:orientation="vertical" >

    <include
        android:id="@+id/common_actionbar"
        layout="@layout/include_action_bar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_line_width_2"
        android:background="@drawable/base_horizontal_line"/>

    <RelativeLayout
        android:id="@+id/rl_switch_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
 
            style="@style/title_elinc"
            android:gravity="bottom"
            android:text="@string/set_notify" />

        <ImageView
            android:id="@+id/iv_open_notification"
            android:layout_width="48dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:background="@drawable/on"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/iv_close_notification"
            android:layout_width="48dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:scaleType="fitXY"
            android:background="@drawable/off"
            android:visibility="invisible" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_line_width_2"
        android:background="@drawable/base_horizontal_line" >
    </View>

    <RelativeLayout
        android:id="@+id/rl_switch_voice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:padding="10dp">

        <TextView
            style="@style/title_elinc"
            android:layout_width="wrap_content"
            android:textSize="16sp"
 
            android:layout_height="wrap_content"
            android:text="@string/set_voice"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_marginLeft="16dp"/>

        <ImageView
            android:id="@+id/iv_open_voice"
            android:layout_width="48dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:background="@drawable/on"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/iv_close_voice"
            android:layout_width="48dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:scaleType="fitXY"
            android:background="@drawable/off"
            android:visibility="invisible" />
    </RelativeLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_line_width_2"
        android:background="@drawable/base_horizontal_line" >
    </View>

    <RelativeLayout
        android:id="@+id/rl_switch_vibrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:gravity="top"
            style="@style/title_elinc"
 
            android:text="@string/set_vibrate" />

        <ImageView
            android:id="@+id/iv_open_vibrate"
            android:layout_width="48dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:background="@drawable/on"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/iv_close_vibrate"
            android:layout_width="48dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="fitXY"
            android:layout_marginRight="16dp"
            android:background="@drawable/off"
            android:visibility="invisible" />
    </RelativeLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_line_width_2"
        android:background="@drawable/base_horizontal_line" >
    </View>

    <RelativeLayout
        android:id="@+id/layout_blacklist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:minHeight="50dp"
        android:padding="10dp" >

        <TextView
            android:layout_marginLeft="16dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/title_elinc"
 
            android:text="黑名单" />

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/register_bottom_arrow" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_line_width_2"
        android:background="@drawable/base_horizontal_line" >
    </View>
    <Button
        android:id="@+id/btn_logout"
        style="@style/Smile.Button.logout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_margin="16dp"
        android:text="@string/logout" />

</LinearLayout>